# opencl-labs

./: CMakeLists.txt
common/: CMakeLists.txt  common_devices.cpp  common_devices.h
kernels/: example_kernel.cl  matrix_mul.cl  task1.cl  task2.cl  task3.cl
samples/task1/: CMakeLists.txt
samples/task1/main/: main.cpp
samples/task1/optional1/: CMakeLists.txt  main.cpp
samples/task1/optional2/: main.cpp
samples/task2/: CMakeLists.txt  common_devices.cpp  common_devices.h  task2.cpp
samples/task3/all/: CMakeLists.txt  all.cpp
samples/task3/part1/: CMakeLists.txt  part1.cpp
samples/task3/part2/: part2.cpp
samples/task3/part3/: part3.cpp
samples/test_task/: CMakeLists.txt  example1.cpp
